--- a/core/templates/background.html
+++ b/core/templates/background.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>کلینیک</title>
+    <title>بانک</title>
     <meta name="description" content="Article Tagging and Comment System"/>
 
     <!— Material Design fonts —>
@@ -36,25 +36,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="active navbar-brand" href="/">کلینیک</a>
+            <a class="active navbar-brand" href="/">بانک</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">خانه</a></li>
-                <li><a href="/panel">پنل</a></li>
-                {#                <li class="dropdown">#}
-                {#                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown#}
-                {#                        <b class="caret"></b></a>#}
-                {#                    <ul class="dropdown-menu">#}
-                {#                        <li><a href="javascript:void(0)">Action</a></li>#}
-                {#                        <li><a href="javascript:void(0)">Another action</a></li>#}
-                {#                        <li><a href="javascript:void(0)">Something else here</a></li>#}
-                {#                        <li class="divider"></li>#}
-                {#                        <li class="dropdown-header">Dropdown header</li>#}
-                {#                        <li><a href="javascript:void(0)">Separated link</a></li>#}
-                {#                        <li><a href="javascript:void(0)">One more separated link</a></li>#}
-                {#                    </ul>#}
-                {#                </li>#}
+{#                <li><a href="/">خانه</a></li>#}
+{#                <li><a href="/panel">پنل</a></li>#}
             </ul>
             <ul class="nav navbar-nav navbar-left">
                 {#                <li><a href="javascript:void(0)">Link</a></li>#}
@@ -62,7 +49,7 @@
                     <li class="dropdown">
                         <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
                             {{ user.first_name }}
-                            به کلینیک خوش آمدید
+                            به بانک خوش آمدید
                             <b class="caret"></b>
 
 </a>
@@ -75,7 +62,6 @@
                         </ul>
                     </li>
                 {% else %}
-                    <li><a href="/register">ثبت نام</a></li>
                     <li><a href="/login">ورود</a></li>
                 {% endif %}
             </ul>
