--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,5 +1,4 @@
-{% extends "layout.html" %}
-{% load material_form %}
+{% extends "core/background.html" %}
 {% load widget_tweaks %}
 {% block pageBody %}
     <div class="col-md-4 col-md-offset-4">
