--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -11,7 +11,7 @@
                     {{ transaction.account.account_number}}
                   <br>
                   <strong>تاریخ:</strong>
-                    {{ transaction.date}}
+                    {{ transaction.date|date:"SHORT_DATE_FORMAT"}}
                   <br>
                   <strong>نوع:</strong>
                     {{ transaction.get_transaction_type_display}}
