add customer list and customer detail and add links from account list and accout detail to it

--- a/core/templates/core/accounts.html
+++ b/core/templates/core/accounts.html
@@ -17,7 +17,9 @@
                 <br>
               {%if account.real_owner%}
               <strong>صاحب حساب:</strong>
-                {{account.real_owner}}
+                <a href="{% url 'core:customer_detail' account.real_owner.id %}">
+                  {{account.real_owner}}
+                </a>
               <br>
               {%endif%}
               {%if account.legal_owners.all%}
