employee list completed

--- a/core/templates/core/background.html
+++ b/core/templates/core/background.html
@@ -25,7 +25,7 @@
 
     <link href="{% static "css/style.css" %}" rel="stylesheet">
     <link href="{% static "css/profile.css" %}" rel="stylesheet">
-    <link href="{% static "css/employee_list.css" %}" rel="stylesheet">
+    <link href="{% static "css/custom.css" %}" rel="stylesheet">
 
 </head>
 <body>
@@ -81,7 +81,6 @@
 <script src="{% static "js/bootstrap.min.js" %}"></script>
 <script src="{% static "js/ripples.min.js" %}"></script>
 <script src="{% static "js/material.min.js" %}"></script>
-<script src="{% static "js/employee_list.js" %}"></script>
 <script>
     $(function () {
         $.material.init();
