Make anchor link to branches

--- a/core/templates/core/branch_list.html
+++ b/core/templates/core/branch_list.html
@@ -15,7 +15,7 @@
                     <tbody>
                     {% for branch in object_list %}
                         <tr>
-                        <td>{{ branch.name}}</td>
+                        <td id={{branch.pk}} >{{ branch.name}}</td>
                         <td>{{ branch.address}}</td>
                     </tr>
                     {% endfor %}
