--- a/core/templates/core/admin_panel.html
+++ b/core/templates/core/admin_panel.html
@@ -10,12 +10,12 @@
               <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>
               <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>
               <a href="{% url 'core:customers' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست مشتری‌ها</a>
-              <a href="{% url 'core:create_branch' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>
+              <a href="{% url 'core:create_bill_type' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>
               <a href="{% url 'core:SystemConfiguration' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعیین کارمزد</a>
               <a href="{% url 'core:create_account' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حساب</a>
               <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>
               <a href="{% url 'core:create_branch' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعیین حساب اصلی سامانه</a>
-              <a href="{% url 'core:create_branch' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">دریافت گزارش شعب</a>
+              <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">مشاهده تراکنش‌ها</a>
           </div>
     </div>
   </div>
