Add unicode support to model & make account legal owner sepretaed by comma

--- a/core/templates/core/accounts.html
+++ b/core/templates/core/accounts.html
@@ -24,11 +24,8 @@
               {%endif%}
               {%if account.legal_owners.all%}
               <strong>صاحبان حقوقی حساب:</strong>
+                {{ account.legal_owners.all | join:", " }}
               {%endif%}
-              {%for owner in account.legal_owners.all%}
-                {{owner}}
-                <br>
-              {%endfor%}
           </div>
         </div>
       </div>
