--- a/core/templates/core/account_detail.html
+++ b/core/templates/core/account_detail.html
@@ -23,11 +23,8 @@
               {%endif%}
               {%if account.legal_owners.all%}
               <strong>صاحبان حقوقی حساب:</strong>
+                {{ account.legal_owners.all | join:", " }}
               {%endif%}
-              {%for owner in account.legal_owners.all%}
-                {{owner}}
-                <br>
-              {%endfor%}
           </div>
         </div>
       </div>
