--- a/core/templates/core/admin_panel.html
+++ b/core/templates/core/admin_panel.html
@@ -15,8 +15,7 @@
               <a href="{% url 'core:create_account' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حساب</a>
               <a href="{% url 'core:create_customer' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد مشتری</a>
               <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>
-              <a href="{% url 'core:create_branch' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعیین حساب اصلی سامانه</a>
-              <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">مشاهده تراکنش‌ها</a>
+              <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">مشاهده تراکنش‌ها</a>
           </div>
     </div>
   </div>
