refactor project structure

--- a/core/templates/core/admin_panel.html
+++ b/core/templates/core/admin_panel.html
@@ -8,17 +8,17 @@
 {#              {% for f in request.user %}#}
 {#                  <P>{{ f }}</P>#}
 {#              {% endfor %}#}
-             <p> {{ user. }}</p>
-{#              <a href="{% url 'core:create_branch' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >ایجاد شعبه</a>#}
-{#              <a href="{% url 'core:branch_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست شعب</a>#}
-{#              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>#}
-{#              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>#}
-{#              <a href="{% url 'core:customers' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست مشتری‌ها</a>#}
-{#              <a href="{% url 'core:create_bill_type' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>#}
-{#              <a href="{% url 'core:SystemConfiguration' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعیین کارمزد</a>#}
-{#              <a href="{% url 'core:create_account' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حساب</a>#}
-{#              <a href="{% url 'core:create_customer' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد مشتری</a>#}
-{#              <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>#}
+{#             <p> {{ user. }}</p>#}
+              <a href="{% url 'core:create_branch' %}" type="button" class="btn btn-primary btn-raised btn-lg btn-block" >ایجاد شعبه</a>
+              <a href="{% url 'core:branch_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست شعب</a>
+              <a href="{% url 'core:create_employee' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">ایجاد کارمند</a>
+              <a href="{% url 'core:employee_list' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">لیست کارمند‌ها</a>
+              <a href="{% url 'core:customers' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست مشتری‌ها</a>
+              <a href="{% url 'core:create_bill_type' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">تعریف قبض جدید</a>
+              <a href="{% url 'core:SystemConfiguration' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعیین کارمزد</a>
+              <a href="{% url 'core:create_account' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد حساب</a>
+              <a href="{% url 'core:create_customer' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">ایجاد مشتری</a>
+              <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>
               <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">مشاهده کلیه تراکنش‌ها</a>
           </div>
     </div>
