--- a/core/templates/core/simple_from_with_single_button.html
+++ b/core/templates/core/simple_from_with_single_button.html
@@ -32,12 +32,11 @@
                         </div>
                     {% endfor %}
 
-{#                    {{ form.as_p }}#}
                     <!-- submit button -->
                     <fieldset>
                         <div class="form-group">
                             <div class="col-xs-6 col-xs-offset-3">
-                                <button type="submit" class="btn btn-lg btn-block btn-raised btn-primary">ایجاد مشتری</button>
+                                <button type="submit" class="btn btn-lg btn-block btn-raised btn-primary">{{ form.button_text }}</button>
                             </div>
                         </div>
                     </fieldset>
