--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -3,6 +3,8 @@
 {% block pageBody %}
   {% for transaction in transaction_list %}
 {#      {% if transaction.account.real_owner.first_name == 'rasa' %}#}
+      input_account
+
       <div class="col-md-8 col-md-offset-2">
           <div class="panel panel-default">
               <div class="panel-body">
@@ -23,7 +25,6 @@
             </div>
       </div>
 {#      {% endif %}#}
-
   {% endfor %}
 {#  {% for transaction in transaction %}#}
 
