تراکنش های یک حساب

--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -3,7 +3,7 @@
 {% block pageBody %}
   {% for transaction in transaction_list %}
 {#      {% if transaction.account.real_owner.first_name == 'rasa' %}#}
-      input_account
+{#      input_account#}
 
       <div class="col-md-8 col-md-offset-2">
           <div class="panel panel-default">
