--- a/core/templates/core/background.html
+++ b/core/templates/core/background.html
@@ -59,11 +59,11 @@
 {#                            <li><a href="javascript:void(0)">Another action</a></li>#}
 {#                            <li><a href="javascript:void(0)">پروفایل</a></li>#}
                             <li class="divider"></li>
-                            <li><a href="/logout">خروج</a></li>
+                            <li><a href="{% url 'core:logout' %}">خروج</a></li>
                         </ul>
                     </li>
                 {% else %}
-                    <li><a href="/login">ورود</a></li>
+                    <li><a href="{% url 'core:login' %}">ورود</a></li>
                 {% endif %}
             </ul>
         </div>
