--- a/core/templates/core/cheque_application.html
+++ b/core/templates/core/cheque_application.html
@@ -36,7 +36,7 @@
                     <fieldset>
                         <div class="form-group">
                             <div class="col-xs-6 col-xs-offset-3">
-                                <button type="submit" class="btn btn-lg btn-block btn-raised btn-primary">واریز پول</button>
+                                <button type="submit" class="btn btn-lg btn-block btn-raised btn-primary">صدور دسته چک</button>
                             </div>
                         </div>
                     </fieldset>
