create greenback feature

--- a/core/templates/core/admin_panel.html
+++ b/core/templates/core/admin_panel.html
@@ -14,6 +14,7 @@
               <a href="{% url 'core:SystemConfiguration' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعیین کارمزد</a>
               <a href="{% url 'core:accounts' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">لیست حساب‌ها</a>
               <a href="{% url 'core:transactions' %}"  type="button" class="btn btn-success btn-raised btn-lg btn-block">مشاهده کلیه تراکنش‌ها</a>
+              <a href="{% url 'core:create_greenback' %}"  type="button" class="btn btn-primary btn-raised btn-lg btn-block">تعریف اسکناس</a>
           </div>
     </div>
   </div>
